Align layout to remove responsive bugs

--- a/static/css/_layout.scss
+++ b/static/css/_layout.scss
@@ -1,10 +1,15 @@
 @charset "UTF-8";
 
+html,
+body {
+  overflow: hidden;
+}
+
 .row {
   margin: 0;
   padding: 2rem 1rem .5rem;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-large) {
     padding: 5rem 0 4rem;
   }
 }
@@ -12,7 +17,7 @@
 .row-hero {
   margin-top: 2rem;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-medium) {
     margin-top: 0;
     padding-top: 2rem;
   }
