--- a/static/css/modules/_hero.scss
+++ b/static/css/modules/_hero.scss
@@ -14,15 +14,12 @@
 }
 
 // hero ubuntu intro pictogram
-@media only screen and (min-width : 769px) {
+@media only screen and (min-width : $breakpoint-medium) {
   .row--intro {
     padding-top: inherit;
   }
 
   .ubuntu-intro {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
     display: flex;
     margin-bottom: 10px;
   }
@@ -48,14 +45,14 @@
   }
 }
 
-@media only screen and (max-width : 768px) {
+@media only screen and (max-width : $breakpoint-medium) {
 
   .ubuntu-intro__list:before {
     display: none;
   }
 }
 
-@media only screen and (min-width : 769px) {
+@media only screen and (min-width : $breakpoint-medium) {
 
   .intro-left,
   .intro-right {
@@ -85,7 +82,7 @@
   float: left;
   width: 100%;
 
-  @media only screen and (min-width : 769px) {
+  @media only screen and (min-width : $breakpoint-medium) {
 
     margin: 0;
     padding-bottom: 0;
@@ -100,7 +97,7 @@
   position: relative;
   width: 50%;
 
-  @media only screen and (max-width : 768px) {
+  @media only screen and (max-width : $breakpoint-medium) {
 
     width: 32%;
   }
@@ -110,7 +107,7 @@
     width: 20%;
   }
 
-  @media only screen and (min-width : 768px) {
+  @media only screen and (min-width : $breakpoint-medium) {
 
     text-indent: -999em;
     width: 124px;
@@ -163,7 +160,7 @@
     }
   }
 
-  @media only screen and (min-width : 769px) {
+  @media only screen and (min-width : $breakpoint-medium) {
 
     padding-top: 130px;
   }
